--- a/src/App.css
+++ b/src/App.css
@@ -49,12 +49,12 @@ h4 {
   margin: 20px 0;
 }
 
-.inc-exp-container > div {
+.inc-exp-container > article {
   flex: 1;
   text-align: center;
 }
 
-.inc-exp-container > div:first-of-type {
+.inc-exp-container > article:first-of-type {
   border-right: 1px solid #dedede;
 }
 
